tests/lean/1162.lean.expected.out
1162.lean:7:4: warning: declaration 'ppday' uses sorry
1162.lean:7:4: warning: declaration 'ppday.equations._eqn_1' uses sorry
1162.lean:10:12: error: equation compiler error, equation #2 has not been used in the compilation, note that the left-hand-side of equation #1 is a variable
